summative.moria.Moria.scala.error
Compilation error:
Moria:14: error: not found: value estFceMur
      while(estSurBiscuit()==false&&estFceMur()==false) {
                                    ^